fix(sheet): column width pixel or percent only
* fix wrong column width if only pixel value are used
* add tests
* adjust "horizontal scrollbar" test
* adjust SheetRendererUnitTest

Issue: TOBAGO-2405

--- a/tobago-example/tobago-example-demo/src/main/webapp/css/demo.css
+++ b/tobago-example/tobago-example-demo/src/main/webapp/css/demo.css
@@ -107,7 +107,7 @@ tobago-tree .tobago-selected a {
   margin-bottom: 2px;
 }
 
-#page\:testSheetColumnWidth td {
+tobago-sheet.vertical-border-big td {
   border-left: 7px solid;
   border-right: 13px solid;
 }
